# Axionyx

./: .gitignore  CLAUDE.md  README.md
.githooks/: README.md  install-hooks.sh  pre-commit
.github/workflows/: README.md  backend-ci.yml  firmware-ci.yml  frontend-ci.yml  mobile-ci.yml
backend/: pyproject.toml
backend/src/axionyx_backend/: __init__.py
backend/tests/: test_placeholder.py
docs/: README.md
docs/api/: README.md
docs/api/rest-api/: authentication.md  config-endpoints.md  device-endpoints.md  ota-endpoints.md  overview.md  wifi-endpoints.md
docs/api/websocket/: commands.md  events.md  overview.md  telemetry.md
docs/architecture/: README.md
docs/architecture/firmware/: device-abstraction.md  overview.md  (+3 more)
docs/contributing/: README.md
docs/development/: README.md
docs/device-specs/: README.md  dummy-device.md  incubator.md  pcr-machine.md
docs/getting-started/: README.md  firmware-setup.md  frontend-setup.md  installation.md  mobile-setup.md  quick-start.md
docs/reference/: README.md
docs/user-guide/: README.md
firmware/: README.md
firmware/api-test/: README.md  requirements.txt
firmware/common/: library.json
firmware/dummy/: DummyDevice.cpp  DummyDevice.h  README.md  dummy_demo.ino  platformio.ini
firmware/incubator/: README.md  platformio.ini
firmware/pcr/: README.md  platformio.ini
frontend/: package.json
mobile/: README.md  pubspec.yaml
mobile/android/: build.gradle
mobile/lib/: app.dart  main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
(+135 files in other folders)
