[project]
name = "axionyx-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thearpankumar", email = "arpankumar1119@outlook.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
axionyx-backend = "axionyx_backend:main"

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"
