[project]
name = "axionyx-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thearpankumar", email = "arpankumar1119@outlook.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
axionyx-backend = "axionyx_backend:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"
